--- a/example.tex
+++ b/example.tex
@@ -108,7 +108,7 @@
     \begin{itemize}
         \item done A
         \item done B
-        \item resposible for C
+        \item responsible for C
     \end{itemize}
 	\faStarO~Something I'm proud of.
   }
